# per-monitor-taskbar

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: app.manifest  app.rc  resource.h
src/: application.cpp  application.h  main.cpp  monitor.cpp  monitor.h  registry_key.h  settings_window.cpp  settings_window.h  taskbar.cpp  taskbar.h
